# libcinputs

./: .gitignore  CMakeLists.txt  README.md  clean.sh  libcinputs.c  libcinputs.h  libcinputs_floatingpoint.c  libcinputs_integers.c  libcinputs_memmng.c  libcinputs_string.c  libcinputs_tests.c  test.sh
src/: libcinputs.h  libcinputs_floatingpoint.c  libcinputs_integers.c  libcinputs_memmng.c  libcinputs_string.c  linked_list_impl.c  linked_list_impl.h
tests/: clean.sh  libcinputs_tests.c  run_tests.sh  stdin_tests.txt
